--- a/src/Passingwind.ElsaDesigner/package.json
+++ b/src/Passingwind.ElsaDesigner/package.json
@@ -75,6 +75,7 @@
     },
     "devDependencies": {
         "@ant-design/pro-cli": "^2.1.5",
+        "@babel/runtime": "^7.23.8",
         "@playwright/test": "^1.17.0",
         "@types/classnames": "^2.3.1",
         "@types/express": "^4.17.14",
