--- a/src/Passingwind.CSharpScript/Passingwind.CSharpScriptEngine.csproj
+++ b/src/Passingwind.CSharpScript/Passingwind.CSharpScriptEngine.csproj
@@ -14,11 +14,14 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.8.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="NuGet.Protocol" Version="6.8.0" />
     <PackageReference Include="Basic.Reference.Assemblies" Version="1.4.5" />
     <PackageReference Include="IgnoresAccessChecksToGenerator" Version="0.7.0">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
@@ -27,6 +30,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <!--<PackageReference Include="System.Reflection.MetadataLoadContext" Version="8.0.0" />-->
   </ItemGroup>
 
   <ItemGroup Condition="$(TargetFramework) == 'net7.0' ">
@@ -50,13 +54,14 @@
 
   <ItemGroup>
     <InternalsAssemblyName Include="Microsoft.CodeAnalysis.CSharp" />
-    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Features" />
-    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.CSharp.Features" />
     <InternalsAssemblyName Include="Microsoft.CodeAnalysis.CSharp.EditorFeatures" />
-    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Scripting" />
+    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.CSharp.Features" />
     <InternalsAssemblyName Include="Microsoft.CodeAnalysis.CSharp.Scripting" />
-    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Workspaces" />
     <InternalsAssemblyName Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
+    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Diagnostics" />
+    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Features" />
     <InternalsAssemblyName Include="Microsoft.CodeAnalysis.LanguageServer.Protocol" />
+    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Scripting" />
+    <InternalsAssemblyName Include="Microsoft.CodeAnalysis.Workspaces" />
   </ItemGroup>
 </Project>
