--- a/test/Passingwind.Abp.ElsaModule.ElsaExtensionsTests/Passingwind.Abp.ElsaModule.ElsaExtensionsTests.csproj
+++ b/test/Passingwind.Abp.ElsaModule.ElsaExtensionsTests/Passingwind.Abp.ElsaModule.ElsaExtensionsTests.csproj
@@ -9,7 +9,8 @@
  
     <ItemGroup>
         <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.Application\Passingwind.Abp.ElsaModule.Application.csproj" />
-        <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.ElsaExtensions\Passingwind.Abp.ElsaModule.ElsaExtensions.csproj" /> 
+        <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.ElsaExtensions\Passingwind.Abp.ElsaModule.ElsaExtensions.csproj" />
+        <ProjectReference Include="..\..\src\Passingwind.CSharpScript\Passingwind.CSharpScriptEngine.csproj" /> 
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain.Tests\Passingwind.Abp.ElsaModule.Domain.Tests.csproj" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     </ItemGroup>
