--- a/src/Passingwind.ElsaDesigner/.vscode/settings.json
+++ b/src/Passingwind.ElsaDesigner/.vscode/settings.json
@@ -22,5 +22,8 @@
     },
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[csharp]": {
+        "editor.defaultFormatter": "ms-dotnettools.csharp"
     }
 }
