⬆️ update to .net8
2. update abp:8
3. update elsa:2.14.1

--- a/app/src/Passingwind.WorkflowApp.HttpApi/Passingwind.WorkflowApp.HttpApi.csproj
+++ b/app/src/Passingwind.WorkflowApp.HttpApi/Passingwind.WorkflowApp.HttpApi.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp</RootNamespace>
     </PropertyGroup>
 
@@ -13,10 +13,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.2.3" /> 
-        <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Account.HttpApi" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="$(AbpVersion)" /> 
+        <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="$(AbpVersion)" />
     </ItemGroup>
 
 </Project>
