--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine
+﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0
 
-EXPOSE 80
+EXPOSE 8080
 
 # 
 WORKDIR /app
