--- a/app/common.props
+++ b/app/common.props
@@ -1,9 +1,11 @@
-<Project>
+﻿<Project>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
     <Version>1.0.0</Version>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
 	<AbpProjectType>app</AbpProjectType>
+    <AbpVersion>8.0.2</AbpVersion>
+    <ElsaVersion>2.14.1</ElsaVersion>
   </PropertyGroup>
 
   <Target Name="NoWarnOnRazorViewImportedTypeConflicts" BeforeTargets="RazorCoreCompile">
