--- a/app/src/Passingwind.WorkflowApp.Application.Contracts/Passingwind.WorkflowApp.Application.Contracts.csproj
+++ b/app/src/Passingwind.WorkflowApp.Application.Contracts/Passingwind.WorkflowApp.Application.Contracts.csproj
@@ -12,11 +12,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.ObjectExtending" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.ObjectExtending" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="$(AbpVersion)" />
     </ItemGroup>
 
 </Project>
