--- a/app/src/Passingwind.WorkflowApp.Application/Passingwind.WorkflowApp.Application.csproj
+++ b/app/src/Passingwind.WorkflowApp.Application/Passingwind.WorkflowApp.Application.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp</RootNamespace>
     </PropertyGroup>
 
@@ -14,12 +14,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.8" />
-        <PackageReference Include="Volo.Abp.Account.Application" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Identity.Application" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="7.2.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.*" />
+        <PackageReference Include="Volo.Abp.Account.Application" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Identity.Application" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="$(AbpVersion)" />
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
