--- a/app/src/Passingwind.WorkflowApp.Domain.Shared/Passingwind.WorkflowApp.Domain.Shared.csproj
+++ b/app/src/Passingwind.WorkflowApp.Domain.Shared/Passingwind.WorkflowApp.Domain.Shared.csproj
@@ -9,13 +9,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="$(AbpVersion)" /> 
     </ItemGroup>
 
     <ItemGroup>
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.*" />
+        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.*" />
     </ItemGroup>
 
 </Project>
