--- a/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
+++ b/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp</RootNamespace>
     </PropertyGroup>
 
@@ -13,18 +13,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.*">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.*">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
             <PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
         </PackageReference>
