--- a/app/src/Passingwind.WorkflowApp.HttpApi.Host/Passingwind.WorkflowApp.HttpApi.Host.csproj
+++ b/app/src/Passingwind.WorkflowApp.HttpApi.Host/Passingwind.WorkflowApp.HttpApi.Host.csproj
@@ -3,24 +3,24 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp</RootNamespace>
         <PreserveCompilationReferences>true</PreserveCompilationReferences>
         <UserSecretsId>Passingwind.WorkflowApp-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8" />
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="7.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="8.0.*" />
         <PackageReference Include="DistributedLock.Redis" Version="1.0.2" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Autofac" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Autofac" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Swashbuckle" Version="$(AbpVersion)" />
     </ItemGroup>
 
     <ItemGroup>
