--- a/app/src/Passingwind.WorkflowApp.MongoDB/Passingwind.WorkflowApp.MongoDB.csproj
+++ b/app/src/Passingwind.WorkflowApp.MongoDB/Passingwind.WorkflowApp.MongoDB.csproj
@@ -3,7 +3,7 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.WorkflowApp</RootNamespace>
     </PropertyGroup>
 
@@ -13,13 +13,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.SettingManagement.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Identity.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.AuditLogging.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.TenantManagement.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.SettingManagement.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Identity.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.AuditLogging.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.TenantManagement.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.MongoDB" Version="$(AbpVersion)" />
     </ItemGroup>
 
 </Project>
