--- a/src/Passingwind.Abp.ElsaModule.Application.Contracts/Passingwind.Abp.ElsaModule.Application.Contracts.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application.Contracts/Passingwind.Abp.ElsaModule.Application.Contracts.csproj
@@ -9,14 +9,14 @@
   
     <ItemGroup>
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" /> 
-        <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Authorization" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Authorization" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="$(AbpVersion)" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain.Shared\Passingwind.Abp.ElsaModule.Domain.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa.Abstractions" Version="2.12.0" />
+        <PackageReference Include="Elsa.Abstractions" Version="$(ElsaVersion)" />
     </ItemGroup>
 
 </Project>
