--- a/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
@@ -12,18 +12,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Ddd.Domain" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.Caching" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Domain" Version="7.2.3" /> 
-        <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.2.3" /> 
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.2.3" /> 
+        <PackageReference Include="Volo.Abp.Ddd.Domain" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.Caching" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.Domain" Version="$(AbpVersion)" /> 
+        <PackageReference Include="Volo.Abp.Identity.Domain" Version="$(AbpVersion)" /> 
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="$(AbpVersion)" /> 
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa" Version="2.12.0" />
+        <PackageReference Include="Elsa" Version="$(ElsaVersion)" />
         <!--overwrite-->
-        <PackageReference Include="Rebus.ServiceProvider" Version="8.4.0" />
-        <PackageReference Include="Rebus.Microsoft.Extensions.Logging" Version="4.0.0" />
+        <PackageReference Include="Rebus.ServiceProvider" Version="10.1.0" />
+        <PackageReference Include="Rebus.Microsoft.Extensions.Logging" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
