--- a/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
+++ b/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
@@ -2,14 +2,14 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>  
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.*" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="IdentityModel" Version="6.1.0" />
+    <PackageReference Include="IdentityModel" Version="6.2.0" />
   </ItemGroup>
 
   <!--<Target Name="GetLibReferences" AfterTargets="ResolveFrameworkReferences">
@@ -23,15 +23,16 @@
     </Target>-->
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.EventBus" Version="7.2.3" />
-    <PackageReference Include="Volo.Abp.Emailing" Version="7.2.3" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.2.3" />
+    <PackageReference Include="Volo.Abp.EventBus" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="$(AbpVersion)" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elsa.Activities.Email" Version="2.12.0" />
-    <PackageReference Include="Elsa.Activities.Http" Version="2.12.0" />
-    <PackageReference Include="Elsa.Activities.Temporal.Common" Version="2.12.0" />
+    <PackageReference Include="Elsa.Core" Version="$(ElsaVersion)" />
+    <PackageReference Include="Elsa.Activities.Email" Version="$(ElsaVersion)" />
+    <PackageReference Include="Elsa.Activities.Http" Version="$(ElsaVersion)" />
+    <PackageReference Include="Elsa.Activities.Temporal.Common" Version="$(ElsaVersion)" />
   </ItemGroup>
  
   <ItemGroup>
@@ -43,7 +44,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
-    <ProjectReference Include="..\Passingwind.CSharpScript\Passingwind.CSharpScriptEngine.csproj"  >
+    <ProjectReference Include="..\Passingwind.CSharpScript\Passingwind.CSharpScriptEngine.csproj">
       <PrivateAssets>all</PrivateAssets>
     </ProjectReference>
   </ItemGroup>
@@ -57,7 +58,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.8.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.8.0" />
     <PackageReference Include="Basic.Reference.Assemblies" Version="1.4.5" />
-    <PackageReference Include="Basic.Reference.Assemblies.Net70" Version="1.4.5" />
+    <PackageReference Include="Basic.Reference.Assemblies.Net80" Version="1.4.5" />
     <PackageReference Include="IgnoresAccessChecksToGenerator" Version="0.7.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
