--- a/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
+++ b/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
@@ -1,21 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa.Abstractions" Version="2.12.0" />
-        <PackageReference Include="NodaTime.Serialization.SystemTextJson" Version="1.0.0" />
+        <PackageReference Include="Elsa.Abstractions" Version="$(ElsaVersion)" />
+        <PackageReference Include="NodaTime.Serialization.SystemTextJson" Version="1.1.2" />
     </ItemGroup>
 
 </Project>
