--- a/src/Passingwind.Abp.ElsaModule.HttpApi.Client/Passingwind.Abp.ElsaModule.HttpApi.Client.csproj
+++ b/src/Passingwind.Abp.ElsaModule.HttpApi.Client/Passingwind.Abp.ElsaModule.HttpApi.Client.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Http.Client" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.Http.Client" Version="$(AbpVersion)" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
     </ItemGroup>
 
