--- a/src/Passingwind.Abp.ElsaModule.Installer/Passingwind.Abp.ElsaModule.Installer.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Installer/Passingwind.Abp.ElsaModule.Installer.csproj
@@ -3,14 +3,14 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="$(AbpVersion)" />
     </ItemGroup>
 
     <ItemGroup>
