--- a/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
+++ b/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
@@ -3,13 +3,13 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.MongoDB" Version="7.2.3" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="7.2.3" />
+        <PackageReference Include="Volo.Abp.MongoDB" Version="$(AbpVersion)" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.MongoDB" Version="$(AbpVersion)" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
     </ItemGroup>
 
