--- a/test/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp.csproj
+++ b/test/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp/Passingwind.Abp.ElsaModule.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,19 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\common.props" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.2.3" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.3" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="$(AbpVersion)" />
     <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.HttpApi.Client\Passingwind.Abp.ElsaModule.HttpApi.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.*" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.*" />
   </ItemGroup>
 
 </Project>
